# NewDataComparePy

./: .gitignore  001.bat  BaseFileComparator.py  ConfigLoader.py  Consts.py  CrossDataComparator.py  CrossFileComparator.py  CsvDataComparator.py  CsvFileComparator.py  DataComparator.py  ExcelDataComparator.py  ExcelFile.py  ExcelFileComparator.py  Folder.txt  HTMLReportGenerator.py  MasterData.xlsx  PerformanceMetrics.py  README.MD  config.json  csv.bat  exl.bat  pyproject.toml  runcsv2csv.py  runexl2exl.py
InputFiles/CSV/Dest/: DestEmpData.csv  NewDestEmpData.csv
InputFiles/CSV/Src/: SrcEmpData.csv
InputFiles/EXLS/Dest/: DestEmpData.xlsx  DestTest-DataChange.xlsx  DestTest-NewRow.xlsx  DestTest-NoChange.xlsx  NewDestEmpData.xlsx
InputFiles/EXLS/Src/: SrcEmpData.xlsx  SrcTest.xlsx
libraries/: BaseFileComparator.py  CrossFileComparator.py  CsvFileComparator.py  ExcelFileComparator.py
libraries/utilities/: ConfigLoader.py  Consts.py  CsvFile.py  HTMLReportGenerator.py
mains/: runcsv2csv.py  runexl2exl.py
